--- a/public/locales/de/dashboard-projects.json
+++ b/public/locales/de/dashboard-projects.json
@@ -3,9 +3,6 @@
   "Start Your First Annotation Project": "Starte Dein Erstes Annotationsprojekt",
   "Empty Dashboard? Bear with us!": "Leeres Dashboard? Fast geschafft!",
   "You don't have creator rights": "Du hast nicht die Berechtigung um eigene Projekte zu erstellen.",
-  "Read the tutorial": "Nutze die Wartezeit auf deine erste Projekteinladung doch, um unsere <a href=\"./help\">Tutorial-Ressourcen</a> zu erkunden.",
-  "Fret not one": "Aber keine Panik! Eine Projekteinladung wartet schon auf Dich. Schau in Deinen ${icon} Benachrichtigungen nach, um loszulegen.",
-  "Fret not more": "Aber keine Panik! ${count} Projekteinladungen warten schon auf Dich. Schau in Deinen ${icon} Benachrichtigungen nach, um loszulegen.",
   "Projects": "Projekte",
   "New Project": "Neues Projekt",
   "Untitled Project": "Unbenanntes Projekt",
@@ -81,17 +78,17 @@
   "Group name...": "Gruppenname...",
   "Add to group": "Zur Gruppe hinzufügen",
   "Add to Selected": "Zur Auswahl Hinzufügen",
-  "Add project to group": "\"${name}\" zu Gruppe Hinzufügen",
+  "Add project to group": "\"{{name}}\" zu Gruppe Hinzufügen",
   "Select group(s) to add project to": "Gruppe(n) auswählen",
   "All Groups": "Alle Gruppen",
   "Number of Projects": "Anzahl Projekte",
   "Success": "Erfolgreich",
-  "Project group successfully added": "${name} wurde hinzugefügt",
-  "Successfully updated groups for project": "Gruppen für ${name} wurden aktualisiert",
+  "Project group successfully added": "{{name}} wurde hinzugefügt",
+  "Successfully updated groups for project": "Gruppen für {{name}} wurden aktualisiert",
   "No matching records": "Keine Einträge gefunden",
   "Rename group": "Gruppe umbenennen",
   "Delete group": "Gruppe löschen",
-  "Successfully deleted group": "Gruppe ${name} gelöscht",
+  "Successfully deleted group": "Gruppe {{name}} gelöscht",
   "Are you sure you want to delete this group?": "Bist Du sicher, dass Du diese Gruppe löschen willst?",
   "Rename Project Group": "Gruppe umbenennen",
   "Successfully renamed group": "Gruppe erfolgreich umbenannt",
@@ -100,6 +97,6 @@
   "Existing Project": "Bestehendes Projekt",
   "All Projects": "Alle Projekte",
   "Select project(s) to add to group": "Projekt(e) auswählen",
-  "Add projects to group": "Projekt zu ${name} hinzufügen",
-  "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert"
+  "Add projects to group": "Projekt zu {{name}} hinzufügen",
+  "Successfully updated projects in group": "Projekte in {{name}} wurden aktualisiert"
 }
