--- a/public/locales/de/project-assignments.json
+++ b/public/locales/de/project-assignments.json
@@ -16,8 +16,8 @@
   "Step": "Schritt",
   "Add documents to this assignment.": "Füge dem Arbeitsauftrag Dokumente hinzu.",
   "Select at least 1 document": "Wähle mindestens 1 Dokument",
-  "Selected 1 document": "1 Dokument ausgewählt",
-  "Selected ${n} documents": "${n} Dokumente ausgewählt",
+  "selectedDocuments_one": "{{count}} Dokument ausgewählt",
+  "selectedDocuments_other": "{{count}} Dokumente ausgewählt",
   "Add people to the assignment.": "Teammitglieder. Achtung: Projekt-Administratoren haben automatisch Zugriff. Sie können nicht aus dem Team entfernt werden.",
   "Name": "Name",
   "Instructions": "Beschreibung",
@@ -25,17 +25,16 @@
   "You": "Du",
   "Anonymous team member": "Anonymes Teammitglied",
   "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
-  "Select at least 1 team member": "Wähle mindestens 1 Teammitglied",
-  "Selected 1 team member": "1 weiteres Teammitglied ausgewählt",
-  "Selected ${n} team members": "${n} weitere Teammitglieder ausgewählt",
+  "selectedTeamMembers_one": "{{count}} weiteres Teammitglied ausgewählt",
+  "selectedTeamMembers_other": "{{count}} weitere Teammitglieder ausgewählt",
   "Add a name and instructions for this assignment.": "Bitte gib einen Namen und eine Beschreibung für diesen Arbeitsauftrag ein.",
   "Almost Ready!": "Fast geschafft!",
   "Verify and confirm this assignment.": "Kontrolliere und bestätige den Arbeitsauftrag.",
   "Name:": "Name:",
-  "1 document": "1 Dokument",
-  "${n} documents": "${n} Dokumente",
-  "1 team member": "1 Teammitglied",
-  "${n} team members": "${n} Teammitglieder",
+  "documentsCount_one": "{{count}} Dokument",
+  "documentsCount_other": "{{count}} Dokumente",
+  "teamMembersCount_one": "{{count}} Teammitglied",
+  "teamMembersCount_other": "{{count}} Teammitglieder",
   "Unnamed assignment.": "Unbenannter Arbeitsauftrag. Bitte ändere den Namen des Auftrags, so dass er leichter zu finden ist.",
   "No documents.": "Keine Dokumente. Bitte wähle mindestens ein Dokument für den Arbeitsauftrag.",
   "No team members.": "Kein Team. Bitte weise mindestens ein Teammitglied zu.",
