--- a/public/locales/de/project-collaboration.json
+++ b/public/locales/de/project-collaboration.json
@@ -9,7 +9,6 @@
   "Project Students": "Student",
   "Anonymous team member": "Anonymes Teammitglied",
   "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
-  "You must set a name": "Du musst einen Namen oder Nickname in Deinen <a href=\"${url}\">Profileinstellungen</a> angeben, bevor Du andere Benutzer einladen kannst.",
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
   "E-Mail": "E-Mail",
@@ -19,9 +18,9 @@
   "Confirm Remove User": "Bist Du sicher?",
   "Leave Project?": "Projekt Verlassen?",
   "You are about to leave": "Diese Aktion kann nicht rückgängig gemacht werden. Wenn Du später wieder am Projekt teilnehmen willst, brauchst Du eine neue Einladung. Bist Du sicher dass Du das Projekt verlassen willst?",
-  "Remove_name": "Bist Du sicher dass Du <strong>${name}</strong> aus dem Projekt entfernen willst?",
-  "Delete_invite": "Bist Du sicher dass Du die Einladung an ${email} löschen willst?",
-  "Remove_anonymous": "Bist Du sicher dass Du diesen Benutzer aus dem Projekt entfernen willst?",
+  "removeName": "Bist Du sicher dass Du <strong>{{name}}</strong> aus dem Projekt entfernen willst?",
+  "deleteInvite": "Bist Du sicher dass Du die Einladung an {{email}} löschen willst?",
+  "removeAnonymous": "Bist Du sicher dass Du diesen Benutzer aus dem Projekt entfernen willst?",
   "Confirm Delete Invite": "Einladung Widerrufen",
   "Could not delete invitation.": "Einladung konnte nicht widerufen werden.",
   "Remove": "Entfernen",
@@ -30,7 +29,7 @@
   "Cancel": "Abbrechen",
   "Close": "Schließen",
   "Invitation Sent": "Einladung abgeschickt",
-  "Invitation was sent to": "Die Einladung wurde an ${user} verschickt",
+  "Invitation was sent to": "Die Einladung wurde an {{user}} verschickt",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not delete user.": "Benutzer konnte nicht entfernt werden.",
   "Could not send invitation.": "Einladung konnte nicht abgeschickt werden.",
@@ -42,13 +41,13 @@
   "Ignored": "Ignoriert",
   "Show Ignored": "Ignorierte anzeigen",
   "User Added": "Benutzer hinzugefügt",
-  "was successfully added to project.": "wurde erfolgreich zum Projekt hinzugefügt.",
+  "was successfully added to project.": "{{name}} wurde erfolgreich zum Projekt hinzugefügt.",
   "Adding User Failed!": "Etwas ist schiefgelaufen",
   "was not added to project.": "konnte dem Projekt nicht hinzugefügt werden.",
   "No Open Join Requests": "Keine offenen Beitrittsanfragen",
   "Join Link": "Beitrittslink",
   "Copy Link": "Link kopieren",
-  "copy_link_info": "Mit diesem Link kannst Du Benutzer in das Projekt einladen.",
+  "copyLinkInfo": "Mit diesem Link kannst Du Benutzer in das Projekt einladen.",
   "Copied to clipboard": "In die Zwischenablage kopiert",
   "You can now distribute this link to invite users.": "Du kannst nun mit diesem Link Benutzer in das Projekt einladen.",
   "Request Ignored": "Beitrittsanfrage Ignoriert",
