--- a/public/locales/de/project-home.json
+++ b/public/locales/de/project-home.json
@@ -48,7 +48,8 @@
   "unsupported_manifest_type": "Nicht unterstützter Manifest-Typ",
   "Validating manifest": "Validiere Manifest...",
   "Valid manifest:": "Gültiges Manifest:",
-  "Importing ${n} items": "Importiere ${n} Dateien",
+  "importingCount_one": "Importiere {{count}} Datei",
+  "importingCount_other": "Importiere {{count}} Dateien",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
   "Could not rename the document.": "Das Dokument konnte nicht umbenannt werden.",
