--- a/public/locales/en/dashboard-projects.json
+++ b/public/locales/en/dashboard-projects.json
@@ -3,9 +3,6 @@
   "Start Your First Annotation Project": "Start Your First Annotation Project",
   "Empty Dashboard? Bear with us!": "Empty Dashboard? Bear with us!",
   "You don't have creator rights": "You have insufficent privileges to create your own projects.",
-  "Read the tutorial": "Why not visit our <a href=\"./help\">tutorial resources</a> while you wait for your first project invitation?",
-  "Fret not one": "But fret not! A project invitation is already waiting. Check your ${icon} notifications to get started.",
-  "Fret not more": "But fret not! ${count} project invitations are already waiting. Check your ${icon} notifications to get started.",
   "Projects": "Projects",
   "New Project": "New Project",
   "Untitled Project": "Untitled Project",
@@ -89,17 +86,17 @@
   "Group name...": "Group name...",
   "Add to group": "Add to group",
   "Add to Selected": "Add to Selected",
-  "Add project to group": "Add \"${name}\" to group",
+  "Add project to group": "Add \"{{name}}\" to group",
   "Select group(s) to add project to": "Select group(s) to add project to",
   "All Groups": "All Groups",
   "Number of Projects": "Number of Projects",
   "Success": "Success",
-  "Project group successfully added": "${name} successfully added",
-  "Successfully updated groups for project": "Successfully updated groups for ${name}",
+  "Project group successfully added": "{{name}} successfully added",
+  "Successfully updated groups for project": "Successfully updated groups for {{name}}",
   "No matching records": "No matching records",
   "Rename group": "Rename group",
   "Delete group": "Delete group",
-  "Successfully deleted group": "Successfully deleted ${name}",
+  "Successfully deleted group": "Successfully deleted {{name}}",
   "Are you sure you want to delete this group?": "Are you sure you want to delete this group?",
   "Rename Project Group": "Rename Project Group",
   "Successfully renamed group": "Successfully renamed group",
@@ -108,8 +105,8 @@
   "Existing Project": "Existing Project",
   "All Projects": "All Projects",
   "Select project(s) to add to group": "Select project(s) to add to group",
-  "Add projects to group": "Add projects to ${name}",
-  "Successfully updated projects in group": "Successfully updated projects in ${name}",
+  "Add projects to group": "Add projects to {{name}}",
+  "Successfully updated projects in group": "Successfully updated projects in {{name}}",
   "Select Groups": "Select Groups",
   "Select Projects": "Select Projects"
 }
