--- a/public/locales/en/project-assignments.json
+++ b/public/locales/en/project-assignments.json
@@ -16,8 +16,8 @@
   "Step": "Step",
   "Add documents to this assignment.": "Add documents to this assignment.",
   "Select at least 1 document": "Select at least 1 document",
-  "Selected 1 document": "Selected 1 document",
-  "Selected ${n} documents": "Selected ${n} documents",
+  "selectedDocuments_one": "Selected {{count}} document",
+  "selectedDocuments_other": "Selected {{count}} documents",
   "Add people to the assignment.": "Add people to the assignment. Note that all Project Administrators will have access by default and cannot be removed from an assignment.",
   "Name": "Name",
   "Instructions": "Instructions",
@@ -25,17 +25,16 @@
   "You": "You",
   "Anonymous team member": "Anonymous team member",
   "This user has not provided a profile name.": "This user has not provided a profile name.",
-  "Select at least 1 team member": "Select at least 1 team member",
-  "Selected 1 team member": "Selected 1 additional team member",
-  "Selected ${n} team members": "Selected ${n} additional team members",
+  "selectedTeamMembers_one": "Selected {{count}} additional team member",
+  "selectedTeamMembers_other": "Selected {{count}} additional team members",
   "Add a name and instructions for this assignment.": "Add a name and instructions for this assignment.",
   "Almost Ready!": "Almost Ready!",
   "Verify and confirm this assignment.": "Verify and confirm this assignment.",
   "Name:": "Name:",
-  "1 document": "1 document",
-  "${n} documents": "${n} documents",
-  "1 team member": "1 team member",
-  "${n} team members": "${n} team members",
+  "documentsCount_one": "{{count}} document",
+  "documentsCount_other": "{{count}} documents",
+  "teamMembersCount_one": "{{count}} team member",
+  "teamMembersCount_other": "{{count}} team members",
   "Unnamed assignment.": "Unnamed assignment. Please change the name to make it easier to find.",
   "No documents.": "No documents. Please select at least one document for the assignment.",
   "No team members.": "No team members. Please add at least one member.",
