--- a/public/locales/en/project-collaboration.json
+++ b/public/locales/en/project-collaboration.json
@@ -9,7 +9,6 @@
   "Project Students": "Student",
   "Anonymous team member": "Anonymous team member",
   "This user has not provided a profile name.": "This user has not provided a profile name.",
-  "You must set a name": "You must set a name or nickname in your <a href=\"${url}\">profile settings</a> before you can invite users to your project.",
   "Invite User to Project": "Invite User to Project",
   "Enter e-mail and access level.": "Enter e-mail and access level.",
   "E-Mail": "E-Mail",
@@ -19,9 +18,9 @@
   "Confirm Remove User": "Confirm Remove User",
   "Leave Project?": "Leave Project?",
   "You are about to leave": "This action is permanent. If you want to join again in the future, the project administrators need to re-invite you. Are you sure you want to leave?",
-  "Remove_name": "Are you sure you want to remove ${name} from the project?",
-  "Delete_invite": "Are you sure you want to delete the invitation to ${email}",
-  "Remove_anonymous": "Are you sure you want to remove this user from the project?",
+  "removeName": "Are you sure you want to remove <strong>{{name}}</strong> from the project?",
+  "deleteInvite": "Are you sure you want to delete the invitation to {{email}}?",
+  "removeAnonymous": "Are you sure you want to remove this user from the project?",
   "Remove": "Remove",
   "Delete": "Delete",
   "Yes, I want to leave": "Yes, I want to leave",
@@ -30,7 +29,7 @@
   "Cancel": "Cancel",
   "Close": "Close",
   "Invitation Sent": "Invitation Sent",
-  "Invitation was sent to": "Invitation was sent to ${user}",
+  "Invitation was sent to": "Invitation was sent to {{user}}",
   "Something went wrong": "Something went wrong",
   "Could not delete user.": "Could not delete user.",
   "Could not send invitation.": "Could not send invitation.",
@@ -46,13 +45,13 @@
   "Ignored": "Ignored",
   "Show Ignored": "Show Ignored",
   "User Added": "User Added",
-  "was successfully added to project.": "was successfully added to project.",
+  "was successfully added to project.": "{{name}} was successfully added to project.",
   "Adding User Failed!": "Adding User Failed!",
   "was not added to project.": "was not added to project.",
   "No Open Join Requests": "No Open Join Requests",
   "Join Link": "Join Link",
   "Copy Link": "Copy Link",
-  "copy_link_info": "This link can be sent to users to invite them to your project.",
+  "copyLinkInfo": "This link can be sent to users to invite them to your project.",
   "Copied to clipboard": "Copied to clipboard",
   "You can now distribute this link to invite users.": "You can now distribute this link to invite users.",
   "Request Ignored": "Request Ignored",
