--- a/public/locales/en/project-home.json
+++ b/public/locales/en/project-home.json
@@ -48,7 +48,8 @@
   "unsupported_manifest_type": "Unsupported manifest type",
   "Validating manifest": "Validating manifest",
   "Valid manifest:": "Valid manifest:",
-  "Importing ${n} items": "Importing ${n} items",
+  "importingCount_one": "Importing {{count}} item",
+  "importingCount_other": "Importing {{count}} items",
   "Something went wrong": "Something went wrong",
   "Could not create the document.": "Could not create the document.",
   "Could not rename the document.": "Could not rename the document.",
