--- a/public/locales/de/notifications.json
+++ b/public/locales/de/notifications.json
@@ -2,11 +2,11 @@
   "Notifications": "Benachrichtigungen",
   "You're up to date!": "Alles erledigt!",
   "No notifications": "Keine Benachrichtigungen",
-  "Invitation": "${sender} lädt dich zum Projekt <strong>${project}</strong> ein.",
+  "Invitation": "{{sender}} lädt dich zum Projekt <strong>{{project}}</strong> ein.",
   "Accept": "Annehmen",
   "Ignore": "Ignorieren",
-  "Confirmed-student": "<strong>${project}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Meine Projekte'.",
-  "Confirmed-creator": "<strong>${project}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Mit mir geteilt'.",
+  "confirmedStudent": "<strong>{{project}}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Meine Projekte'.",
+  "confirmedCreator": "<strong>{{project}}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Mit mir geteilt'.",
   "Select Projects": "Projekte auswählen",
   "Acknowledge": "Bestätigen"
 }
