#375 - Data export implementation

--- a/src/i18n/de/account-menu.json
+++ b/src/i18n/de/account-menu.json
@@ -4,5 +4,6 @@
   "Sign out": "Logout",
   "Users": "Benutzer",
   "Site Administration": "Administration",
-  "Collections": "Sammlungen"
+  "Collections": "Sammlungen",
+  "Jobs": "Jobs"
 }
