--- a/src/i18n/en/account-menu.json
+++ b/src/i18n/en/account-menu.json
@@ -4,5 +4,6 @@
   "Sign out": "Sign out",
   "Users": "Users",
   "Site Administration": "Site Administration",
-  "Collections": "Collections"
+  "Collections": "Collections",
+  "Jobs": "Jobs"
 }
