--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -111,5 +111,6 @@
   "Add projects to group": "Add projects to ${name}",
   "Successfully updated projects in group": "Successfully updated projects in ${name}",
   "Select Groups": "Select Groups",
-  "Select Projects": "Select Projects"
+  "Select Projects": "Select Projects",
+  "Export project": "Export project"
 }
