Added DE labels

--- a/public/locales/de/dashboard-projects.json
+++ b/public/locales/de/dashboard-projects.json
@@ -100,5 +100,5 @@
   "Add projects to group": "Projekt zu ${name} hinzufügen",
   "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert",
   "Export project": "Projekt exportieren",
-  "Import Project": "Import Project"
+  "Import Project": "Projekt importieren"
 }
