--- a/public/locales/de/jobs-management.json
+++ b/public/locales/de/jobs-management.json
@@ -22,5 +22,5 @@
   "Download": "Herunterladen",
   "IMPORT": "Import",
   "Menu actions for job": "Menu actions for job: {{name}}",
-  "remove this job": "remove this job"
+  "remove this job": "Job entfernen"
 }
