#375 - Adding error message for failed project export/import

--- a/public/locales/de/dashboard-projects.json
+++ b/public/locales/de/dashboard-projects.json
@@ -100,5 +100,7 @@
   "Add projects to group": "Projekt zu ${name} hinzufügen",
   "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert",
   "Export project": "Projekt exportieren",
-  "Import Project": "Projekt importieren"
+  "Import Project": "Projekt importieren",
+  "Failed to export project.": "Failed to export project.",
+  "Failed to import project.": "Failed to import project."
 }
